--- a/Views/AdminMonitoring/Dashboard.cshtml
+++ b/Views/AdminMonitoring/Dashboard.cshtml
@@ -1,10 +1,9 @@
+@*@model SBIT3J_SuperSystem_Final.Models.SalesGraphViewModel*@
 
 @{
     ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-@model SBIT3J_SuperSystem_Final.Models.SalesGraphViewModel
-
 <link href="~/Content/Styles/Group1Stylesheets/Dashboard.css" rel="stylesheet" />
 
 <h2>Dashboard</h2>
@@ -15,7 +14,7 @@
             <img src="~/Image/Group1-Assets/CriticalLevelIcon.png" />
         </div>
         <div class="total-information-container">
-            <h2>@ViewBag.CritStock</h2>
+            <h2>@(ViewBag.CritStock?? 0)</h2>
             <h4>Critical Items</h4>
             <h5>Total Critical items recorded in the Inventory</h5>
         </div>
@@ -25,7 +24,7 @@
             <img src="~/Image/Group1-Assets/TotalProductsIcon.png" />
         </div>
         <div class="total-information-container">
-            <h2>@ViewBag.TotalProducts</h2>
+            <h2>@(ViewBag.TotalProducts?? 0)</h2>
             <h4>Total Products</h4>
             <h5>Total product recorded in the inventory. </h5>
         </div>
@@ -35,7 +34,7 @@
             <img src="~/Image/Group1-Assets/DailySales.png" />
         </div>
         <div class="total-information-container">
-            <h2>@ViewBag.CurrentDailySale </h2>
+            <h2>@(ViewBag.CurrentDailySale?? 0)</h2>
             <h4>Daily Sales</h4>
             <h5>Total daily sales recorded in the inventory.</h5>
         </div>
@@ -45,7 +44,7 @@
             <img src="~/Image/Group1-Assets/Stocks on hand.png" />
         </div>
         <div class="total-information-container">
-            <h2>@ViewBag.TotalStockLevel</h2>
+            <h2>@(ViewBag.TotalStockLevel?? 0)</h2>
             <h4>Stocks</h4>
             <h5>Total product item stock on hand.</h5>
         </div>
@@ -55,7 +54,7 @@
 
 <center><h2>2023 Monthly Sales</h2></center>
 <div class="graph-container" style="display: flex; align-items: center; justify-content: center;">
-    
+
 
     <div style="height: 90vh; width: 80vw;">
         <canvas id="myChart"></canvas>
@@ -100,36 +99,4 @@
       }
     }
  });
-</script>
-
-
-<div style="width:100%; height:400px;  border:2px solid black; padding: 0 40px 20px 40px;">
-    <canvas id="salesChart"></canvas>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-     var ctx = document.getElementById('salesChart').getContext('2d');
-    var salesData = @Html.Raw(Json.Encode(Model.MonthlySales));
-
-    var chart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: salesData.map(item => item.Month),
-            datasets: [{
-                label: 'Monthly Total Sales',
-                data: salesData.map(item => item.TotalSales),
-                backgroundColor: 'rgba(	255, 237, 79, 1)',
-                borderColor: 'rgba(0,0,0,, 1)',
-                borderWidth: 2
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
-    });
 </script>
