--- a/Views/EmployeeManagement/Delete.cshtml
+++ b/Views/EmployeeManagement/Delete.cshtml
@@ -321,9 +321,8 @@
 
                 <h1>DO YOU WANT TO LOGOUT?</h1>
 
-                <!--href="Url.Action("Login", "Accounts")"-->
-                <a class="lgout-btn">LOGOUT</a>
-
+                <!---->
+                <a class="lgout-btn" href="@Url.Action("Logout", "Accounts")">LOGOUT</a>
 
 
 
@@ -360,9 +359,9 @@
 
         <!-- Payroll - DIRECTLY TO ANOTHER SYSTEM -->
         <!--<a href="Url.Action("Payroll","Payroll")">-->
-        <img src="~/Image/Group4/ICONS/Payroll.png" class="navitem" />
+        <!--<img src="~/Image/Group4/ICONS/Payroll.png" class="navitem" />
         </a>
-        <hr>
+        <hr>-->
 
     </nav>
 
@@ -464,5 +463,35 @@
                     </div>
                 }
             </div>
+
+            <script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("openModal");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on the button, open the modal
+    btn.onclick = function () {
+        modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+
+            </script>
+
 </body>
 </html>
