--- a/Views/AdminMonitoring/CashierLogs.cshtml
+++ b/Views/AdminMonitoring/CashierLogs.cshtml
@@ -5,7 +5,11 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>CashierLogs</h2>
+<div style="display:flex; justify-content:center; margin-top:350px;">
+    <h2>This page is currently not available...</h2>
+</div>
+
+@*<h2>CashierLogs</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -42,6 +46,6 @@
         </td>
     </tr>
 }
-</table>
+</table>*@
 
 
